--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">vkdocs</string>
+    <string name="app_name">Docer</string>
+    <string name="continue_using_app">Continue using this app</string>
+    <string name="logout">Logout</string>
+    <integer name="com_vk_sdk_AppId">5252455</integer>
+    <string name="title_activity_documents">DocumentsActivity</string>
 </resources>
