--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Docer</string>
+    <string name="app_name">VKDocs</string>
     <string name="continue_using_app">Continue using this app</string>
     <string name="logout">Logout</string>
     <integer name="com_vk_sdk_AppId">5252455</integer>
