--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="continue_using_app">Continue using this app</string>
     <string name="logout">Logout</string>
     <integer name="com_vk_sdk_AppId">5252455</integer>
-    <string name="title_activity_documents">DocumentsActivity</string>
+    <string name="title_activity_documents">My documents</string>
 </resources>
