--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_sort_by">Sort by</string>
+    <string name="label_modified">Modified:</string>
+    <string name="label_size">Size:</string>
 </resources>
