--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
 
     <string name="from">from</string>
     <string name="download">Download</string>
-    <string name="available_offline">Available offline</string>
+    <string name="available_offline">Offline</string>
     <string name="rename">Rename</string>
     <string name="delete">Delete</string>
     <string name="share_external">Share</string>
