--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="action_sort_by">Sort by</string>
     <string name="label_modified">Modified:</string>
     <string name="label_size">Size:</string>
+    <string name="title_activity_document_viewer">DocumentViewerActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
