--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="label_size">Size:</string>
     <string name="title_activity_document_viewer">DocumentViewerActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="no_items">No items</string>
 </resources>
