--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="preference_user_repository">user_repository</string>
+
     <string name="app_name">VKDocs</string>
     <string name="continue_using_app">Continue using this app</string>
     <string name="logout">Logout</string>
