--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <string name="used_memory">Data</string>
     <string name="preference_user_repository">user_repository</string>
 
     <string name="app_name">VKDocs</string>
@@ -44,4 +46,6 @@
     <string name="title_activity_document_viewer">DocumentViewerActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="no_items">No items</string>
+    <string name="data_in_cache">"Data in cache "</string>
+    <string name="data_in_offline">Data in offline</string>
 </resources>
