--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_sort_by">Sort by</string>
-    <string name="label_modified">Modified:</string>
+    <string name="label_added">Added:</string>
     <string name="label_size">Size:</string>
     <string name="title_activity_document_viewer">DocumentViewerActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
