--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -37,7 +37,7 @@
     <string name="tab_text">Текст</string>
     <string name="tab_books">Книги</string>
     <string name="tab_archives">Архивы</string>
-    <string name="tab_gifs">Gifs</string>
+    <string name="tab_gifs">Анимации</string>
     <string name="tab_images">Изображения</string>
     <string name="tab_music">Аудио</string>
     <string name="tab_video">Видео</string>
@@ -79,19 +79,19 @@
     <string name="open_in_other_app">Открыть другим приложением</string>
     <string name="open_button">ОТКРЫТЬ</string>
     <string name="clear_offline_title">Удалить оффлайн документы</string>
-    <string name="gifs">Gifs</string>
+    <string name="gifs">Анимации</string>
     <string name="all_title_tab">ВСЕ</string>
     <string name="offline_title_tab">ОФФЛАЙН</string>
     <string name="images">Изображения</string>
     <string name="logout_message">После выхода, все данные, связанные с этой учетной записью будут удалены из системы.</string>
-    <string name="modified">Загружен</string>
+    <string name="modified">Дате загрузки</string>
     <string name="music">Аудио</string>
     <string name="name">Названию</string>
     <string name="no_archives">Нет архивов</string>
     <string name="no_audios">Нет аудио</string>
     <string name="no_books">Нет книг</string>
     <string name="no_documents">Нет документов</string>
-    <string name="no_gifs">Нет Gif</string>
+    <string name="no_gifs">Нет анимаций</string>
     <string name="action_sign_in_short">Войти</string>
     <string name="all">Все</string>
     <string name="archives">Архивы</string>
